# client_server_filestat

./: CMakeLists.txt
src/: main.c
src/controller/: controller.c  controller.h  local_controller.c  local_controller.h  main_controller.c  remote_controller.c  remote_controller.h
src/entites/: app_config.c  app_config.h  cli_options.c  cli_options.h  constants.h  execution_stats.c  execution_stats.h  file_info.c  file_info.h  input_parameters.c  input_parameters.h  options.c  options.h  previous_output.c  previous_output.h
src/handlers/: app_config_producer.c  app_config_producer.h  execution_stats_producer.c  execution_stats_producer.h  fetch_stats.c  fetch_stats.h  history_producer.c  history_producer.h  input_output_merger.c  input_output_merger.h  report_producer.c  report_producer.h  search_by_length.c  search_by_length.h  search_user_group.c  search_user_group.h  send_processed.c  send_processed.h  stats_producer.c  stats_producer.h
src/io/: help_printer.c  help_printer.h  output_reader.c  output_reader.h  output_writer.c  output_writer.h  parameters_reader.c  parameters_reader.h
src/utils/: app_config_producer.c  app_config_producer.h  file_utils.c  file_utils.h  filestat.db  host_port_parser.c  host_port_parser.h  options_parser.c  options_parser.h  params_parser.c  params_parser.h  stringify_info.c  stringify_info.h
